# hello-axum-course

./: Cargo.toml  README.md
database/: init.sql
src/: lib.rs  main.rs
src/data/: Cargo.toml
src/data/src/: lib.rs  main.rs
src/routes/: create_task.rs  custom_json_extractor.rs  delete_task.rs  get_json.rs  get_tasks.rs  hello_world.rs  manage_user.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  partial_update.rs  path_variables.rs  query_params.rs  returns_201.rs  update_task.rs  validate_data.rs
