[package]
name = "data"
version = "0.1.0"
edition = "2021"

[lib]
name = "data"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenvy = "0.15.6"
sea-orm = { version = "0.10.6", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.24.1", features = ["macros"] }
